syntax = "proto3";

package com.polling.grpc.notification.service;

option java_multiple_files = true;

option java_package = "com.polling.grpc";

message ResultStatus {
  int32 code = 1;
  string message = 2;
}