syntax = "proto3";
package com.polling.grpc;

option java_multiple_files = true;

option java_package = "com.polling.grpc";

import "eventService.proto";

service NotificationService {

  /**
   * Server(1) : Client(1)
   * - unary RPC
   * - Client 가 요청을 보내고 Server 가 응답하는 형태
   */
  rpc sendNotification(ListOfNotificationRequest) returns (NotificationResponse) {}

}

message ListOfNotificationRequest{
  repeated NotificationRequest notificationRequest = 1;
}

message NotificationRequest{
  string to = 2;
  string content = 3;
}

message NotificationResponse{
  ResultStatus status = 1;
  string result = 2;
  string randomCode = 3;

}

